[tool.poetry]
name = "aioidex"
version = "0.2.0"
description = "Idex API async Python wrapper"
authors = ["ape364 <ape364@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ape364/aioidex"

[tool.poetry.dependencies]
python = "^3.7"
websockets = "^7.0"
shortid = "^0.1.2"
backoff = "^1.8"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-asyncio = "^0.10.0"
asynctest = "^0.12.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
